# introduction-to-ai-ml-homework

./: 24UG00338_vemanahemanth_37_zooExam.ipynb  DecisionTree.py  EDA and Feature Engineering.py  K-Means Clustering & PCA on Telecom Data.py  PredictingHousePrice.py  browser_use_ai.txt  homework1A.py  homework1b.py  navigation bot  vaccum_bot_homework.py
ai navigation bot/: Extracted_Edges__from_KML_LineStrings_.csv  week 2 report.docx
ai navigation bot/navigation bot/: pyproject.toml  read.md
ai navigation bot/navigation bot/CampusNavi 2/: app.py  gemini_integration.py  pathfinding.py  pyproject.toml  secrets.toml
ai navigation bot/navigation bot/CampusNavi 2/attached_assets/: Book1_1758707719037.xlsx  map_1758707724808.osm
fifa 26/FifaPredictor-2/: README.md  app.py  data_orchestrator.py  etl_runner.py  initialize_data.py  pyproject.toml  run.py  understat_cache.sqlite
fifa 26/FifaPredictor-2/api_collectors/: __init__.py  api_football_client.py  football_data_downloader.py
fifa 26/FifaPredictor-2/app/: __init__.py  data_loader.py
fifa 26/FifaPredictor-2/attached_assets/: Pasted-Great-below-is-a-complete-production-style-application-plan-for-your-FIFA-2026-Finalist-Predictor-1762544491564_1762544491564.txt
fifa 26/FifaPredictor-2/data/: teams_integrated_data.json
fifa 26/FifaPredictor-2/ml_pipeline/: __init__.py  feature_engineering.py  model_training.py  monte_carlo_simulation.py
homework/homeworks/: homework1b.py
lab/: haunted house.py  terry_rat.py
projects/ai navigation bot/: Extracted_Nodes__from_KML_.csv  week1 progress.docx
(+16 files in other folders)
