[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "google-genai>=1.38.0",
    "networkx>=3.5",
    "osmnx>=2.0.6",
    "streamlit-folium>=0.25.2",
    "streamlit>=1.50.0",
    "pandas>=2.3.2",
    "sift-stack-py>=0.9.1",
    "google-generativeai>=0.8.5",
    "scikit-learn>=1.7.2",
]
